# education_application

./: .gitignore  Chapters.py  Exercises.py  FirstWindow.py  FlowLayout.py  Lessons.py  MenuButton.py  MultipleChoice.py  Question.py  Readme.md  Statistics.py  Style.py  WrapLabel.py  app.py  pyproject.toml  results.csv  style.css  todo.norg
docs/: Digital_Learning_-_User_Manual.docx  Makefile  bibliography.bib  report.rmd
resources/lessons/: lesson1.1.1.html  lesson1.1.2.html  lesson1.1.3.html  lesson1.1.4.html  lesson1.1.5.html  lesson1.1.6.html  lesson1.2.1.html  lesson1.2.2.html  lesson1.2.3.html  lesson1.2.4.html  lesson1.2.5.html  lesson2.1.0.html  lesson2.1.1.html  lesson2.1.2.html  lesson2.1.3.html  lesson2.1.4.html  lesson2.1.5.html  lesson2.1.html  lesson2.2.0.html  lesson2.2.1.html  lesson3.1.0.html  lesson3.1.1.html  lesson3.1.2.html  lesson3.1.3.html  lesson3.1.4.html  lesson3.1.5.html  lesson3.1.6.html  lesson3.1.7.html  style.css
